# CFT

./: CFT_Macros.h  CMakeLists.txt  FMap.c  FMap.h  FVector.c  FVector.h  LICENSE  Main.c  README.md  Type Prefixes.txt  Type_Info.c  Type_Info.h
Internal/: CFT_Error.h  CFT_Macros.h  FMap.c  FMap.h  FString.c  FString.h  FVector.c  FVector.h  Switch_String.h  Type_Info.c  Type_Info.h  Utility.c  Utility.h  uShet Lib copyright.txt
Internal/Object_System/: FObject.h  FType.c  FType.h  SType_Manager.c  SType_Manager.h
